--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
       href="/images/utilities/logos/logo.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      #google_translate_element {
+        position: fixed;
+        z-index: 30;
+        top: 5%;
+        right: 20px;
+      }
+    </style>
     <title>aasales</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div id="google_translate_element"></div>
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: "en", includedLanguages: "en,ci,ac,fr,hi" },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="https://translate.google.com/translate_a/element.js?
+cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
