--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       #google_translate_element {
         position: fixed;
         z-index: 30;
-        top: 5%;
+        top: 10%;
         right: 20px;
       }
     </style>
@@ -26,7 +26,7 @@
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement(
-          { pageLanguage: "en", includedLanguages: "en,ci,ac,fr,hi" },
+          { pageLanguage: "en", includedLanguages: "en,cn,ar,hi" },
           "google_translate_element"
         );
       }
