--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
+      body > .skiptranslate {
+        top: 0px !important;
+      }
       #google_translate_element {
         position: fixed;
         z-index: 30;
@@ -18,15 +21,27 @@
     </style>
     <title>aasales</title>
   </head>
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = "https://embed.tawk.to/64fc57eaa91e863a5c128cc0/default";
+      s1.charset = "UTF-8";
+      s1.setAttribute("crossorigin", "*");
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <div id="google_translate_element"></div>
-
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement(
-          { pageLanguage: "en", includedLanguages: "en,cn,ar,hi" },
+          { pageLanguage: "en", includedLanguages: "en,zh-CN,ar,hi" },
           "google_translate_element"
         );
       }
