implemented the google translate button added the tawk.to chatbot to the site

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
         z-index: 30;
         top: 10%;
         right: 20px;
+        .goog-logo-link {
+          display: none !important;
+        }
+        .goog-te-gadget {
+          color: transparent !important;
+        }
+        .goog-te-banner-frame {
+          display: none !important;
+        }
+
+        .VIpgJd-ZVi9od-l4eHX-hSRGPd,
+        .VIpgJd-ZVi9od-ORHb-OEVmcd {
+          display: none !important;
+        }
       }
     </style>
     <title>aasales</title>
