--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       #google_translate_element {
         position: fixed;
         z-index: 30;
-        top: 10%;
-        right: 20px;
+        top: 6%;
+        right: 2%;
         .goog-logo-link {
           display: none !important;
         }
@@ -30,6 +30,49 @@
         .VIpgJd-ZVi9od-l4eHX-hSRGPd,
         .VIpgJd-ZVi9od-ORHb-OEVmcd {
           display: none !important;
+        }
+      }
+      .fixed-con {
+        z-index: 9724790009779558 !important;
+        background-color: #f7f8fc;
+        position: fixed;
+        overflow-y: auto;
+        font-size: 18px;
+      }
+      .VIpgJd-ZVi9od-aZ2wEe-wOHMyf {
+        z-index: 9724790009779 !important;
+        display: none !important;
+        border-radius: 50%;
+        border: 2px solid gold;
+        padding: 5px 20px;
+      }
+      .VIpgJd-ZVi9od-aZ2wEe-OiiCO {
+        width: 80px;
+        height: 80px;
+      }
+      #google_translate_element select {
+        background-color: white;
+        color: #18004a;
+        border: none;
+        border-radius: 50px;
+        padding: 6px 16px;
+        font-size: 18px;
+      }
+      #goog-gt-tt,
+      .goog-te-balloon-frame {
+        display: none !important;
+      }
+      .goog-text-highlight {
+        background: none !important;
+        box-shadow: none !important;
+      }
+      @media (min-width: 320px) and (max-width: 599px){
+        #google_translate_element{
+          top: 5%;
+          right: 35%
+        }
+        #google_translate_element select{
+          font-size: 12px;
         }
       }
     </style>
